--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "ctn-parser",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Simple typescript implementation of Earley's parsing algorithm",
   "main": "dist/index.js",
   "types": "dist/index.d.js",
   "files": [
-    "/dist"
+    "/dist",
+    "LICENSE",
+    "README.md"
   ],
   "scripts": {
     "test": "jest",
-    "build": "tsc"
+    "build": "npm run prettier & npm run lint & tsc",
+    "lint": " eslint \"{**/*,*}.{js,ts}\"",
+    "prettier": "prettier --write \"{src,test}/**/*.{js,ts}\"",
+    "publish": "npm run build && npm publish"
   },
   "repository": {
     "type": "git",
@@ -30,8 +35,15 @@
   "homepage": "https://github.com/cosminfc/centurion-parser#readme",
   "devDependencies": {
     "@types/jest": "^29.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.4.3",
+    "prettier": "^2.8.4",
     "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
 }
